@@ -6,14 +6,14 @@
  <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="factory">resonate.proxy</property>
  <property name="link_target"></property>
- <property name="immediate_view">view</property>
+ <property name="immediate_view">proxy_redirect_view</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <property name="default_view">view</property>
+ <property name="default_view">proxy_redirect_view</property>
  <property name="view_methods">
-  <element value="view"/>
+  <element value="proxy_redirect_view"/>
  </property>
  <property name="default_view_fallback">False</property>
  <property name="add_permission">cmf.ManagePortal</property>
